--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,8 @@ builders/
 config/
 external-chaincode/
 install-fabric.sh
+run/
+
 
 # override the ignore of all config/ folders
 !full-stack-asset-transfer-guide/infrastructure/sample-network/config
