--- a/gradle.properties
+++ b/gradle.properties
@@ -11,7 +11,7 @@ org.gradle.jvmargs=-Xmx1G
 	cloth_version = 13.0.121
 
 # Mod Properties
-	mod_version = 1.0-SNAPSHOT
+	mod_version = 1.1.0
 	maven_group = dev.cattyn
 	archives_base_name = shulkerview
 
