--- a/gradle.properties
+++ b/gradle.properties
@@ -13,5 +13,5 @@ org.gradle.jvmargs=-Xmx1G
 # Mod Properties
 	mod_version = 1.1.0
 	maven_group = dev.cattyn
-	archives_base_name = shulkerview
+	archives_base_name = shulker-view
 
