--- a/gradle.properties
+++ b/gradle.properties
@@ -3,15 +3,15 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://modmuss50.me/fabric.html
-	minecraft_version=1.21.4
-	yarn_mappings=1.21.4+build.8
-	loader_version=0.16.10
-	fabric_version=0.119.2+1.21.4
-	modmenu_version = 13.0.3
-	cloth_version = 17.0.144
+	minecraft_version=1.21.5
+	yarn_mappings=1.21.5+build.1
+	loader_version=0.16.14
+	fabric_version=0.122.0+1.21.5
+	modmenu_version = 14.0.0-rc.2
+	cloth_version = 18.0.145
 
 # Mod Properties
-	mod_version = 1.3.2
+	mod_version = 1.4.0
 	maven_group = dev.cattyn
 	archives_base_name = shulker-view
 
